tests/ty-name-escape-02/out.txt
error: expression causes a type name to escape its scope
  ┌─ err.sml:5:5
  │
5 │     if 3 < 4 then [] else [(3, bad, false, "hey")]
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

typechecking failed
